tests/ui/traits/const-traits/match-non-const-eq.stock.stderr
error[E0658]: cannot match on `str` in constant functions
  --> $DIR/match-non-const-eq.rs:7:9
   |
LL |         "a" => (),
   |         ^^^
   |
   = note: `str` cannot be compared in compile-time, and therefore cannot be used in `match`es
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: see issue #143874 <https://github.com/rust-lang/rust/issues/143874> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `PartialEq` is not yet stable as a const trait
  --> $DIR/match-non-const-eq.rs:7:9
   |
LL |         "a" => (),
   |         ^^^
   |
help: add `#![feature(const_cmp)]` to the crate attributes to enable
   |
LL + #![feature(const_cmp)]
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
